syntax = "proto3";

package file_transfer;

// Go Bindings Generations
option go_package = "schema/file_transfer";


//Services
service FileTransferService {
    rpc UploadFile(stream UploadVideoRequest) returns (UploadVideoResponse);
}

message UploadVideoRequest{
    oneof data {
        VideoInfo info = 1;
        bytes chuck_data = 2;
    }
}

message VideoInfo{
    string name = 1;
}

message UploadVideoResponse{
    uint32 size=1;
}

// protoc --go_out=. --go-grpc_out=.  ./schema/file_transfer/file_transfer.proto
